--- a/custom-init.org
+++ b/custom-init.org
@@ -50,28 +50,29 @@ Override some of the defaults.
 
 #+begin_src emacs-lisp
   (setq-default
-   inhibit-startup-screen t             ; Disable the startup screen
-   initial-scratch-message nil          ; Empty the initial *scratch* buffer
-   indent-tabs-mode nil                 ; Insert space characters instead of tabs
-   tab-width 2                          ; The number of spaces a tab is equal to
-   fill-column 78                       ; Line length above which to break a line
-   cursor-type 'bar                     ; Display the cursor as a vertical bar
-   column-number-mode t                 ; Display the column number in the mode line
-   vc-follow-symlinks t                 ; Follow symlinks without requesting confirmation
-   major-mode 'text-mode                ; Set the default major mode to text-mode
-   ring-bell-function 'ignore           ; Disable the error beep sound
-   inhibit-compacting-font-caches nil)  ; Prevent compacting font caches during garbage collection
-  (savehist-mode t)                     ; Save the minibuffer history
-  (show-paren-mode t)                   ; Enable visualization of matching parens
-  (save-place-mode t)                   ; Jump to the last known position when reopening a file
-  (electric-pair-mode t)                ; Enable automatic brackets pairing
-  (global-hl-line-mode t)               ; Enable line highlighting in all buffers
-  (delete-selection-mode t)             ; Replace selected text when typing
-  (global-auto-revert-mode t)           ; Automatically reload externally modified files
-  (fset 'yes-or-no-p 'y-or-n-p)         ; Replace "yes/no" prompts with "y/n"
-  (prefer-coding-system 'utf-8)         ; Set default encoding to UTF-8
-  (set-language-environment 'utf-8)     ; Set default language environment to UTF-8
-  (tool-bar-mode 0)                     ; Hide tool bar.
+    inhibit-startup-screen t             ; Disable the startup screen
+    initial-scratch-message nil          ; Empty the initial *scratch* buffer
+    indent-tabs-mode nil                 ; Insert space characters instead of tabs
+    tab-width 2                          ; The number of spaces a tab is equal to
+    fill-column 78                       ; Line length above which to break a line
+    cursor-type 'bar                     ; Display the cursor as a vertical bar
+    column-number-mode t                 ; Display the column number in the mode line
+    vc-follow-symlinks t                 ; Follow symlinks without requesting confirmation
+    major-mode 'text-mode                ; Set the default major mode to text-mode
+    ring-bell-function 'ignore           ; Disable the error beep sound
+    inhibit-compacting-font-caches nil)  ; Prevent compacting font caches during garbage collection
+  (savehist-mode t)                      ; Save the minibuffer history
+  (show-paren-mode t)                    ; Enable visualization of matching parens
+  (save-place-mode t)                    ; Jump to the last known position when reopening a file
+  (electric-pair-mode t)                 ; Enable automatic brackets pairing
+  (global-hl-line-mode t)                ; Enable line highlighting in all buffers
+  (delete-selection-mode t)              ; Replace selected text when typing
+  (global-auto-revert-mode t)            ; Automatically reload externally modified files
+  (fset 'yes-or-no-p 'y-or-n-p)          ; Replace "yes/no" prompts with "y/n"
+  (prefer-coding-system 'utf-8)          ; Set default encoding to UTF-8
+  (set-language-environment 'utf-8)      ; Set default language environment to UTF-8
+  (tool-bar-mode 0)                      ; Hide tool bar.
+  (global-visual-line-mode t)            ; Word wrap.
 #+end_src
 
 File-related customizations.
@@ -718,15 +719,18 @@ Use acronyms for naming key chords, or leave a comment otherwise. For directions
 
 #+begin_src emacs-lisp
   ;; buffer
-  (key-chord-define-global "bl"     'switch-to-buffer)  ; short for buffer list.
+  (key-chord-define-global "bl"     'switch-to-buffer)  ; buffer list.
   (key-chord-define-global "bs"     'save-buffer)
+  (key-chord-define-global "zi"     'text-scale-increase)  ; zoom in.
+  (key-chord-define-global "zo"     'text-scale-decrease)  ; zoom out.
+  (key-chord-define-global "wr"     'visual-line-mode)  ; word wrap.
   ;; file
-  (key-chord-define-global "fb"     'find-file)  ; short for find buffer.
+  (key-chord-define-global "fb"     'find-file)  ; find buffer.
   (key-chord-define-global "kb"     'kill-buffer)
   ;; window
   (key-chord-define-global "ow"     'other-window)
   ;; move
-  (key-chord-define-global "gw"     'forward-word)  ; short for go + VIM key.
+  (key-chord-define-global "gw"     'forward-word)  ; go + VIM key.
   (key-chord-define-global "gb"     'backward-word)
   (key-chord-define-global "gh"     'backward-char)
   (key-chord-define-global "gj"     'forward-line)
