--- a/custom-init.org
+++ b/custom-init.org
@@ -73,6 +73,8 @@ Override some of the defaults.
   (set-language-environment 'utf-8)      ; Set default language environment to UTF-8
   (tool-bar-mode 0)                      ; Hide tool bar.
   (global-visual-line-mode t)            ; Word wrap.
+  (global-display-line-numbers-mode t)   ; Show line number.
+
 #+end_src
 
 File-related customizations.
@@ -84,14 +86,6 @@ File-related customizations.
     (auto-save-default nil)             ; Stop creating #autosave# files
     (mode-require-final-newline nil)    ; Don't add newlines at the end of files
     (large-file-warning-threshold nil)) ; Open large files without requesting confirmation
-#+end_src
-
-Enable line numbering.
-
-#+begin_src emacs-lisp
-  (use-package display-line-numbers
-    :ensure nil
-    :hook ((text-mode prog-mode conf-mode) . display-line-numbers-mode))
 #+end_src
 
 Improve the default scrolling behavior.
@@ -634,7 +628,6 @@ Major mode for editing Markdown files.
   (use-package markdown-mode
     :init
     (setq markdown-command "multimarkdown")
-    :hook (markdown-mode . (lambda () (display-line-numbers-mode -1)))
     :mode (("README\\.md\\'" . gfm-mode)
            ("\\.md\\'"       . markdown-mode)
            ("\\.markdown\\'" . markdown-mode)))
@@ -740,7 +733,7 @@ Major mode for editing JSON files.
 
 Basic key chords are below. Mode-specific key chords are defined in each mode.
 
-Use acronyms for naming key chords, or leave a comment otherwise. For directions, use VIM keys.
+Use acronyms for naming key chords, or leave a comment otherwise.
 
 #+begin_src emacs-lisp
   ;; buffer
@@ -755,6 +748,7 @@ Use acronyms for naming key chords, or leave a comment otherwise. For directions
   ;; window
   (key-chord-define-global "ow"     'other-window)
   ;; move
+  (key-chord-define-global "gl"     'goto-line)
   (key-chord-define-global "gc"     'goto-last-change)
   (key-chord-define-global "fw"     'forward-word)
   (key-chord-define-global "bw"     'backward-word)
@@ -922,7 +916,6 @@ Org mode is a a to-do, agenda, project planner, literate programming, note-takin
     :hook (org-mode . (lambda ()
                         (org-indent-mode)
                         (variable-pitch-mode -1)
-                        (display-line-numbers-mode -1)
                         (set-input-method "custom-input-method")))
     :bind (("C-c l" . org-store-link)
            ("C-c a" . org-agenda)
